# rst2text

./: pyproject.toml  rst2text.py
.forgejo/workflows/: releases.yaml
